feat: add /api/users endpoint to create user
